# oguard

./: .gitignore  .iss  Cargo.toml  Makefile.toml  README.md  build.rs  config.toml  cspell.json  example-config.toml  package-lock.json
.cargo/: config.toml
locales/: en.json
platform/: README.md
platform/linux/: oguard.service
platform/macos/: .gitignore  bundle
platform/macos/OGuard/Applications/OGuard.app/Contents/: Info.plist
platform/macos/OGuard/Applications/OGuard.app/Contents/MacOS/: .gitignore
platform/macos/Scripts/: postinstall
platform/windows/: .iss
src/: action.rs  config.rs  logging.rs  main.rs  persistent_watcher.rs  server.rs  service.rs  ups.rs  watcher.rs
src/database/: mod.rs  seed.rs
src/database/entities/: battery_history.rs  event_pipeline.rs  events.rs  mod.rs  state_history.rs
src/database/migration/: m20240705_091507_create_events.rs  m20240706_034731_create_battery_history.rs  m20240706_034731_create_state_history.rs  m20240709_071553_create_event_pipelines.rs  mod.rs
src/http/: error.rs  mod.rs  models.rs  routes.rs
src/http/middleware/: auth_gate.rs  mod.rs
src/http/routes/: auth.rs  history.rs  mod.rs  pipelines.rs  realtime.rs  server.rs  state.rs  web.rs
src/services/: event_tracker.rs  history_tracker.rs  mod.rs  watcher.rs
src/ups/: command.rs  commands.rs  device.rs  executor.rs  mod.rs  models.rs
src/utils/: mod.rs  validate.rs  windows_service.rs
webapp/: .env.development  .gitignore  .prettierrc  README.md  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  vite.config.ts
webapp/src/: app.d.ts  app.html
webapp/src/lib/: presets.ts
webapp/src/lib/api/: device.ts  event-pipelines.ts  history.ts  login.ts  types.ts  utils.ts
webapp/src/lib/components/: Alert.svelte  AuthGuard.svelte  Breadcrumbs.svelte  ConfirmDialog.svelte  DeviceBattery.svelte  DeviceBatteryCard.svelte  DeviceOutputCard.svelte  DurationInput.svelte  Header.svelte  Localized.svelte  LoginDialog.svelte  LogoutButton.svelte  PageTransition.svelte  Pagination.svelte  Spinner.svelte  api.ts  index.ts
webapp/src/lib/components/auth/: AuthGuard.svelte  LoginDialog.svelte  LogoutButton.svelte
webapp/src/lib/components/charts/: BatteryCapacityChart.svelte
webapp/src/lib/components/container/: container-content.svelte  container-footer.svelte  container-header.svelte  container-root.svelte  container-section.svelte  container-wrapper.svelte  index.ts
webapp/src/lib/components/data-table/: flex-render.svelte
webapp/src/lib/components/history/: DeviceBatteryHistoryTable.svelte  DeviceStateHistoryTable.svelte
webapp/src/lib/components/i18n/: I18nProvider.svelte  Localized.svelte  LocalizedDateTime.svelte
webapp/src/lib/components/pipeline/: ActionDelayConfig.svelte  ActionItem.svelte  ActionRepeatConfig.svelte  ActionRetryConfig.svelte  ActionTypeIcon.svelte  ActionTypeItem.svelte  AddActionForm.svelte  ConfigureActionForm.svelte  CreateActionForm.svelte  DeletePipelineDialog.svelte  EditActionForm.svelte  EventInput.svelte  EventLevelIcon.svelte  PipelineItem.svelte  PipelineNewEditForm.svelte
webapp/src/lib/components/pipeline/config/: ActionDelayConfig.svelte  ActionRepeatConfig.svelte  ActionRetryConfig.svelte  ExecutableConfig.svelte  HTTPConfig.svelte  ShutdownConfig.svelte  UPSShutdownConfig.svelte
webapp/src/lib/components/table/: ManageColumns.svelte
webapp/src/lib/i18n/: i18n.svelte.ts
webapp/src/lib/sections/: LoadingScreen.svelte
webapp/src/lib/sections/auth/: AuthGuard.svelte  LoginDialog.svelte  LogoutButton.svelte
webapp/src/lib/sections/history/: DeviceBatteryHistoryTable.svelte  DeviceStateHistoryTable.svelte
webapp/src/lib/sections/overview/: DeviceBatteryCard.svelte  DeviceOutputCard.svelte
webapp/src/lib/sections/pipeline/: PipelineDeleteDialog.svelte  PipelineItem.svelte  PipelineNewEditForm.svelte
webapp/src/lib/sections/pipeline/action/: ActionItem.svelte  ActionTypeIcon.svelte  ActionTypeItem.svelte  ConfigureActionForm.svelte  CreateActionForm.svelte  EditActionForm.svelte
webapp/src/lib/sections/pipeline/action/config/: ActionDelayConfig.svelte  ActionRepeatConfig.svelte  ActionRetryConfig.svelte  ExecutableConfig.svelte  HTTPConfig.svelte  ShutdownConfig.svelte  UPSShutdownConfig.svelte  index.ts
webapp/src/lib/styles/: global.scss  palette.scss
webapp/src/lib/styles/components/: combobox.scss  dialog.scss  pagination.scss  pin-input.scss  popover.scss  select.scss  switch.scss  tooltip.scss
webapp/src/locales/: en.json
webapp/src/params/: int.ts
webapp/src/routes/: +layout.svelte  +layout.ts  +page.svelte
webapp/src/routes/(auth)/: +layout.svelte
webapp/src/routes/(auth)/configure/: +page.svelte
webapp/src/routes/(auth)/pipelines/[id=int]/: +page.svelte
webapp/src/routes/(auth)/realtime/: +page.svelte
webapp/src/routes/configure/: +page.svelte
webapp/src/routes/events/: +page.svelte
webapp/src/routes/history/: +page.svelte
webapp/src/routes/pipelines/: +page.svelte
webapp/src/routes/pipelines/(write)/: +layout.svelte
webapp/src/routes/pipelines/(write)/[id=int]/: +page.svelte
webapp/src/routes/pipelines/(write)/create/: +page.svelte
webapp/src/routes/pipelines/[id=int]/: +page.svelte
webapp/src/routes/pipelines/create/: +page.svelte
webapp/src/routes/realtime/: +layout.svelte  +page.svelte
