[package]
name = "oguard"
version = "0.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/jacobtread/oguard"
authors = ["Jacobtread <jacobtread@gmail.com>"]
readme = "README.md"
description = "OGuard"

[dependencies]
# Web framework
axum = "0.7"
tower-http = { version = "0.5.2", features = ["cors"] }

# Environment variables
dotenvy = "0.15.7"

# Desktop notifications
notify-rust = "4.11.0"

# Logging
log = "0.4"
env_logger = "0.11"
log-panics = { version = "2", features = ["with-backtrace"] }

# USB HID 
hidapi = "2.6.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Async runtime & utilities
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync", "full"] }
futures = "0.3.30"


chrono = { version = "0.4.38", features = ["serde"] }
ordered-float = { version = "4.2.1", features = ["serde"] }

# Localization
rust-i18n = "3"
strum = { version = "0.26.3", features = ["derive"] }

# SeaORM 
[dependencies.sea-orm]
version = "^0"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "sqlx-sqlite",
    "with-json",
]

# SeaORM Migration 
[dependencies.sea-orm-migration]
version = "^0"
default-features = false
features = ["runtime-tokio-rustls", "sqlx-sqlite"]
