[package]
name = "oguard"
version = "0.0.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/jacobtread/oguard"
authors = ["Jacobtread <jacobtread@gmail.com>"]
readme = "README.md"
description = "OGuard"

[dependencies]
# Windows service helpers
windows-service = "0.7"

# Web framework & HTTP server libraries
axum = "0.7"
tower-http = { version = "0.5.2", features = ["cors"] }
tower = "0.4.13"
hyper = "1.4.1"

# Environment variables
dotenvy = "0.15.7"

# Desktop notifications & Dialogs
notify-rust = "4.11.0"
native-dialog = "0.7"

# Logging
log = { version = "0.4", features = ["serde"] }
log-panics = { version = "2", features = ["with-backtrace"] }

# USB HID 
hidapi = "2.6.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Async runtime & utilities
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync", "full"] }
futures = "0.3"

# Localization
rust-i18n = "3"

# String enums
strum = { version = "0.26.3", features = ["derive"] }

# HTTP client
reqwest = "0.12"

# HTTP sessions for authentication
axum_session = "0.14"

# System shutdown logic
system_shutdown = "4.0.1"

# Resource embedding
embeddy = "0.1"

# Configuration parsing
toml = "0.8"

# Command line argument parsing
clap = { version = "4.5", features = ["derive"] }

# Date
chrono = { version = "0.4", features = ["serde"] }

# Ordered floating point numbers for comparison
ordered-float = { version = "4.2", features = ["serde"] }

# Mime type and mime guessing
mime = "0.3.17"
mime_guess = "2.0.5"

# Request validation
garde = { version = "0.20.0", features = ["derive", "full"] }
axum-valid = { version = "0.20.0", default-features = false, features = [
    "garde",
    "basic",
    "full_garde",
] }
compact_str = "0.8.0"

# SeaORM 
[dependencies.sea-orm]
version = "^1"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "sqlx-sqlite",
    "with-json",
]

# SeaORM Migration 
[dependencies.sea-orm-migration]
version = "^1"
default-features = false
features = ["runtime-tokio-rustls", "sqlx-sqlite"]

# Logging provider 
[dependencies.log4rs]
version = "1.3.0"
default-features = false
features = ["console_appender", "file_appender"]
